v17-combining-argo-tools/argo-rollouts/kavto.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-rollouts
spec:
  replicas: 5
  strategy:
    blueGreen: 
      activeService: nginx-service-active
      previewService: nginx-service-preview
      autoPromotionEnabled: false

  selector:
    matchLabels:
      app: nginx-rollouts
  template:
    metadata:
      labels:
        app: nginx-rollouts
    spec:
      containers:
      - name: nginx-rollouts
        image: edi.crocobet.ro:5005/myapp:c2887cfc-e88e-4d4e-b937-a4a5b57fad18
        ports:
        - containerPort: 80

        
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-active
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx-rollouts
  type: NodePort


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-preview
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx-rollouts
  type: NodePort
