v17-combining-argo-tools/argo-rollouts/nginx-rollouts.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-rollouts
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 1m}
  selector:
    matchLabels:
      app: nginx-rollouts
  template:
    metadata:
      labels:
        app: nginx-rollouts
    spec:
      containers:
      - name: nginx-rollouts
        image: edi.crocobet.ro:5005/myapp/nginx:31a489af-9e7d-45c0-a19e-690dd64d5cd3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx-rollouts
  type: NodePort
