v17-combining-argo-tools/argo-rollouts/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: argo.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-active
            port:
              number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-preview
spec:
  ingressClassName: nginx
  rules:
  - host: argo-kavto.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-preview
            port:
              number: 8080
